Put extract and move on one line

--- a/jenkins-slave-centos-maven/Dockerfile
+++ b/jenkins-slave-centos-maven/Dockerfile
@@ -29,14 +29,12 @@ RUN echo "${user}    ALL=(ALL)    ALL" >> etc/sudoers
 
 # Install Maven
 RUN wget http://mirror.metrocast.net/apache/maven/maven-3/3.6.0/binaries/apache-maven-3.6.0-bin.tar.gz -P /root
-RUN tar xvf /root/apache-maven-3.6.0-bin.tar.gz
-RUN mv /root/apache-maven-3.6.0 /opt/maven
+RUN tar xvf /root/apache-maven-3.6.0-bin.tar.gz && mv /root/apache-maven-3.6.0 /opt/maven
 
 # Install Ant
 
 RUN wget http://mirror.metrocast.net/apache//ant/binaries/apache-ant-1.10.5-bin.tar.gz -P /root
-RUN tar xvf /root/apache-ant-1.10.5-bin.tar.gz
-RUN mv /root/apache-ant-1.10.5 /opt/ant
+RUN tar xvf /root/apache-ant-1.10.5-bin.tar.gz && mv /root/apache-ant-1.10.5 /opt/ant
 RUN ln -s /opt/ant/bin/ant /usr/bin/ant
 
 # Add environment variables
