--- a/jenkins-slave-centos-maven/Dockerfile
+++ b/jenkins-slave-centos-maven/Dockerfile
@@ -9,6 +9,7 @@ RUN yum install -y git && \
     yum install -y wget && \
 	yum install -y java-1.8.0-openjdk && \
 	yum install -y sudo && \
+    yum install -y unzip && \
 	yum clean all
 
 ARG user=jenkins
